--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "astro": "^5.14.5",
     "astro-seo": "^0.8.4",
+    "astro-swiper": "^2.1.0",
     "bootstrap": "^5.2.2",
     "gsap": "^3.13.0",
     "jquery": "^3.7.1",
     "nodemailer": "^7.0.9",
-    "sharp": "^0.34.4",
-    "swiper": "^12.0.2"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@types/nodemailer": "^7.0.2",
